--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -1,5 +1,8 @@
 {>"layouts/master" /}
 
 {<body}
-    <h1>{@pre type="content" key="greeting"/}</h1>
+    <div class="tl"></div>
+    <div class="tr"></div>
+    <div class="bl"></div>
+    <div class="br"></div>
 {/body}
